build_log3.txt

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava
> Task :processResources UP-TO-DATE
> Task :classes

> Task :compileClientJava
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:16: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                  ^
  symbol:   class WorldRenderContext
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:17: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                  ^
  symbol:   class WorldRenderEvents
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
    private static void onRender(WorldRenderContext context) {
                                 ^
  symbol:   class WorldRenderContext
  location: class PestRenderer
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
        WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                         ^
Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

> Task :compileClientJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java uses unchecked or unsafe operations.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:16: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                    ^
    symbol:   class WorldRenderContext
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:17: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                    ^
    symbol:   class WorldRenderEvents
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
      private static void onRender(WorldRenderContext context) {
                                   ^
    symbol:   class WorldRenderContext
    location: class PestRenderer
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
          WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                           ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 7s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
3 actionable tasks: 2 executed, 1 up-to-date
